kubernetes/yamls/application/ingress-notls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: skype
  namespace: skype
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: susi-skypebot.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: skype
          servicePort: 80
