kubernetes/yamls/application/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: skype
  namespace: skype
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - susi-skypebot.tk
    secretName: skypebot-tls
  rules:
  - host: susi-skypebot.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: skype
          servicePort: 80
